// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddNewPlaylist > matches the snapshot 1`] = `
"<button class="iconButton fullWidth link link" type="button" title="Add playlist">
  <phlistplus class="icon" aria-hidden="true" size="20" weight="duotone"></phlistplus><span class="text"> Add playlist </span>
</button>"
`;

exports[`AddNewPlaylist > when collapsed value is true > matches the snapshot 1`] = `
"<button class="iconButton fullWidth link link" type="button" title="Add playlist">
  <phlistplus class="icon" aria-hidden="true" size="20" weight="duotone"></phlistplus><span class="text visually-hidden"> Add playlist </span>
</button>"
`;
